feat: containerize with Docker

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -112,4 +112,6 @@
     "outDir": "./dist",
     "rootDir": "./src",
   },
+  "include": ["src"],
+  "exclude": ["node_modules", "tests", "jest.setup.ts"]
 }
